.scratch/k8-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`k8.localhost`)
    priority: 10
    services:
    - kind: Service
      name: kubernetes-dashboard
      # namespace: kube-system
      port: 443
      serversTransport: kubernetes-dashboard-transport
      # tls:
    # certResolver: dns-cloudflare
